<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.fragments.AboutAppFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36sp"
        android:gravity="center_horizontal"
        android:text="@string/app_name"
        android:textColor="?attr/colorOnSurface"
        android:textSize="34sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/about_app_text"
        android:textColor="?attr/colorOnSurface"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal|bottom"
        android:text="@string/nota_texto"
        android:textColor="?attr/colorOnSurface"
        android:textSize="12sp" />


</LinearLayout>