<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.fragments.RegisterFormulaFragment">

    <data>

        <variable
            name="vm"
            type="com.rebirth.unitfy.viewmodel.RegisterFormulaViewModel" />
    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8sp"
            android:layout_marginTop="8sp"
            android:layout_marginEnd="8sp"
            android:layout_marginBottom="8sp"
            android:background="@drawable/unity_borders">

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/appCompatSpinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:minHeight="48dp"
                app:entries="@{vm.classificationUnits}"
                app:itemSelected="@{vm.onClassificationItemSelectedListener}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/appCompatImageButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="SpeakableTextPresentCheck" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/appCompatImageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:backgroundTint="?attr/colorPrimary"
                android:onClick="@{vm::onCreateDialogClassification}"
                android:src="@android:drawable/ic_menu_add"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="SpeakableTextPresentCheck" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8sp"
            android:layout_marginEnd="8sp"
            android:layout_marginBottom="8sp"
            android:background="@drawable/unity_borders">

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/appCompatSpinner3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:minHeight="48dp"
                app:entries="@{vm.originUnits}"
                app:itemSelected="@{vm.onConvertionUnitOriginItemSelectedListener}"
                app:layout_constraintBottom_toTopOf="@+id/appCompatSpinner2"
                app:layout_constraintEnd_toStartOf="@+id/appCompatImageButton2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="SpeakableTextPresentCheck" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/appCompatSpinner2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:minHeight="48dp"
                app:entries="@{vm.originUnits}"
                app:itemSelected="@{vm.onConvertionUnitDestinyItemSelectedListener}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/appCompatImageButton2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appCompatSpinner3"
                tools:ignore="SpeakableTextPresentCheck" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/appCompatImageButton2"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:backgroundTint="?attr/colorPrimary"
                android:onClick="@{vm::onCreateDialogConvUnit}"
                android:src="@android:drawable/ic_menu_add"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="SpeakableTextPresentCheck" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8sp"
            android:layout_marginEnd="8sp"
            android:layout_marginBottom="8sp"
            android:background="@drawable/unity_borders">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/appCompatButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:backgroundTint="?attr/colorPrimary"
                android:onClick="@{vm::addNewMutation}"
                android:text="@string/add_text"
                android:textColor="?attr/colorOnPrimary"
                app:layout_constraintBottom_toTopOf="@+id/textView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:hint="@string/formula_de_conversion"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:layout_constraintBottom_toTopOf="@+id/materialDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?attr/backgroundColor"
                    android:enabled="@{vm.selectedOriginUnit != null &amp;&amp; vm.selectedDestinyUnit != null}"
                    android:inputType="textMultiLine"
                    android:text="@={vm.convertionFormula}"
                    android:textColorHint="#757575" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/materialDivider"
                android:layout_width="0dp"
                android:layout_height="4dp"
                app:dividerColor="?attr/colorPrimary"
                app:layout_constraintBottom_toTopOf="@+id/textInputLayout2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

            <com.google.android.material.textfield.TextInputLayout

                android:id="@+id/textInputLayout2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:hint="@string/formula_de_inversion"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:layout_constraintBottom_toTopOf="@+id/appCompatButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/materialDivider">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?attr/backgroundColor"
                    android:enabled="@{vm.selectedOriginUnit != null &amp;&amp; vm.selectedDestinyUnit != null}"
                    android:inputType="textMultiLine"
                    android:text="@={vm.invertionFormula}"
                    android:textColorHint="#757575" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="8dp"
                android:gravity="center_horizontal|bottom"
                android:text="@string/nota_texto"
                android:textColor="?attr/colorOnSurface"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appCompatButton" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>
